--- a/packages/components/Progress/src/CircularProgress.html
+++ b/packages/components/Progress/src/CircularProgress.html
@@ -10,6 +10,11 @@
         speed: 10,
       };
     },
+    onupdate({ changed }) {
+      if (changed.progress) {
+        this._drawCircularProgress();
+      }
+    },
     oncreate() {
       const { data } = this.options;
       if (!data || typeof data.progress === 'undefined') {
@@ -21,11 +26,6 @@
       const { interval } = this.get();
       clearInterval(interval);
     },
-    onupdate({ changed }) {
-      if (changed.progress) {
-        this._drawCircularProgress();
-      }
-    },
     methods: {
       start() {
         let { speed } = this.get();
@@ -36,7 +36,7 @@
           if (progress > 100) {
             this.set({ progress: 0 });
           } else {
-            this.set({ progress: progress + (5 * speed) / 10 });
+            this.set({ progress: progress + 5 * speed / 10 });
           }
         }, 50);
         this.set({ interval });
