--- a/packages/components/Switch/src/Switch.html
+++ b/packages/components/Switch/src/Switch.html
@@ -30,9 +30,7 @@
   $disabled-icon-border: $gray-light;
   $disabled-bar-bg: $gray-lighter;
 
-  input {
-    display: none;
-  }
+  input { display: none; }
 
   .switch {
     position: relative;
