--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -1,8 +1,6 @@
 <label
   ref:container
-  class="input type-{type}"
-  class:is-readable="readable"
-  class:is-invalid="!isValid && !!_errorMsg"
+  class="input -{type} {readable ? 'is-readable' : ''}"
   style="background-color: {bgColor}; color: {textColor};"
   on:mousedown="_onMousedown(event)"
 >
@@ -12,11 +10,9 @@
 
   <input
     ref:input
-    class="align-{align}"
+    class="-{align}"
     type={_visible ? 'text' : 'password'}
     style="color: {textColor};" {disabled}
-    {readonly}
-    on:keydown
     on:focus="_onFocus(event)"
     on:blur="_onBlur(event)"
     on:keyup="_onKeyUp(event)"
@@ -39,7 +35,6 @@
 
 <script>
   import Keyboard from '@mamba/pos/api/keyboard.js';
-  import System from '@mamba/pos/api/system.js';
 
   export default {
     components: {
@@ -56,10 +51,8 @@
         /** Automatically focus the input */
         autofocus: false,
         /** Force the to be focused */
-        forcefocus: false,
-        readonly: false,
+        forceFocus: false,
         disabled: false,
-        isFocused: false,
         /** Style */
         type: 'text',
         align: 'right',
@@ -93,15 +86,14 @@
       }
     },
     onupdate({ changed, current }) {
-      if (
-        changed._errorMsg &&
-        current._errorMsg &&
-        current.validateOn === 'input'
+      if (changed._errorMsg
+        && current._errorMsg
+        && current.validateOn === 'input'
       ) {
         this.refs.input.scrollIntoView(false);
       }
 
-      if (changed.value) {
+      if(changed.value) {
         this.refs.input.value = current.value;
       }
     },
@@ -124,7 +116,6 @@
       _onFocus() {
         const { alphanumeric } = this.get();
         this.refs.container.classList.add('is-focused');
-        this.set({ isFocused: true });
         if (alphanumeric) {
           Keyboard.setKeyboardAsAlphanumeric();
         } else {
@@ -132,15 +123,14 @@
         }
       },
       _onBlur(e) {
-        const { alphanumeric, forcefocus } = this.get();
-        if (forcefocus) {
+        const { alphanumeric, forceFocus } = this.get();
+        if(forceFocus) {
           e.stopImmediatePropagation();
           e.preventDefault();
           /** onBlur can be fired just before a <Input/> destruction */
           setTimeout(() => this.refs.input && this.focus());
           return;
         }
-        this.set({ isFocused: false });
         this.refs.container.classList.remove('is-focused');
         if (alphanumeric) {
           Keyboard.setKeyboardAsNumeric();
@@ -152,38 +142,27 @@
         this.fire('keyup', e);
 
         if (key === 'enter') {
-          const { validateOn, validation } = this.get();
-          if (validateOn === 'submit') {
+          const { validateOn } = this.get();
+          if(validateOn === 'submit') {
             const validationResult = this._getValidationResult();
 
             this.set(validationResult);
 
-            /** Blur the input if a validation is present and the input is valid */
-            if (validation && validationResult.isValid) {
+            if (validationResult.isValid) {
               this.blur();
             }
           }
-
-          const { isValid, value } = this.get();
-          if (!isValid) {
-            System.beep();
-            this.fire('submitInvalid', e);
-          } else {
-            this.fire('submitValid', e);
-          }
-
-          e.isValid = isValid;
-          e.value = value;
-          this.fire('submit', e);
+          this.fire(this.get().isValid ? 'submitValid' : 'submitInvalid');
+          this.fire('submit');
         }
       },
       _onInput(e) {
         const { value } = this.refs.input;
         const { validation, validateOn } = this.get();
 
-        if (validation) {
+        if(validation) {
           if (validateOn === 'input') {
-            const validationResult = !value.length
+            const validationResult = (!value.length)
               ? { isValid: false, _errorMsg: undefined }
               : this._getValidationResult();
 
@@ -231,7 +210,7 @@
     position: relative;
     display: block;
     width: 100%;
-    padding: 10px 15px 5px;
+    padding: 10px 15px;
     background-color: #fff;
     transition: 0.3s ease border-bottom;
     border-bottom: 2px solid $input-border-color;
@@ -242,10 +221,6 @@
 
     &.is-focused {
       border-bottom-color: $input-focus-border-color;
-    }
-
-    &.is-invalid {
-      border-bottom-color: $input-invalid-border-color;
     }
   }
 
@@ -265,18 +240,10 @@
     font-size: 30px;
     height: 36px;
     /* border-bottom: 1px dotted #dedede; */
+  }
 
-    &.align-right {
-      text-align: right;
-    }
-
-    &.align-left {
-      text-align: left;
-    }
-
-    &.align-center {
-      text-align: center;
-    }
+  input:not(.-left) {
+    text-align: right;
   }
 
   input[type='text'] {
@@ -290,9 +257,8 @@
   }
 
   .validation-msg {
-    text-align: right;
-    color: $input-error-color;
-    /* border-top: 2px solid; */
+    color: #d50000;
+    border-top: 2px solid;
     padding-top: 5px;
     font-size: 12px;
   }
