--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -13,6 +13,7 @@
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
   import { ConfirmationDialog } from '@mamba/dialog';
+  import Keystroke from './Keystroke.html';
 
   /** Return if a certain shortcut key is valid */
   const isValidShortcut = (keyName, e) =>
@@ -75,6 +76,9 @@
       onKeyup(e) {
         const keyName = Keyboard.getKeyName(e.charCode || e.which || e.keyCode);
 
+        if (Keystroke.hasActiveHandler(keyName)) {
+          return;
+        }
         const shortcutsEnabled = this.store && this.store.meta.get('shortcuts');
 
         /**
