--- a/packages/components/App/src/Keystroke.html
+++ b/packages/components/App/src/Keystroke.html
@@ -2,23 +2,23 @@
   import Keyboard from '@mamba/pos/api/keyboard.js';
 
   const register = { length: 0 };
+  const hasActiveHandler = key =>
+    register[key] && register[key].some(component => component.get().active);
+
   const keystrokeHandler = e => {
     const keyName = Keyboard.getKeyName(e.charCode || e.which || e.keyCode);
     const keyRegister = register[keyName];
 
-    if (keyRegister) {
-      /** Is there some active keystroke handler? */
-      if (keyRegister.some(component => component.get().active)) {
-        e.preventDefault();
-        e.stopImmediatePropagation(); // prevent the <App /> key up event from firing
+    if (hasActiveHandler(keyName)) {
+      e.preventDefault();
+      e.stopImmediatePropagation(); // prevent the <App /> key up event from firing
 
-        keyRegister.forEach(component => {
-          const { active } = component.get();
-          if (active) {
-            component.fire('keystroke', e);
-          }
-        });
-      }
+      keyRegister.forEach(component => {
+        const { active } = component.get();
+        if (active) {
+          component.fire('keystroke', e);
+        }
+      });
     }
   };
 
@@ -28,6 +28,7 @@
   export default {
     setup(Keystroke) {
       Keystroke.register = register;
+      Keystroke.hasActiveHandler = hasActiveHandler;
     },
     data() {
       return {
