--- a/packages/components/Dialog/src/ConfirmationDialog.html
+++ b/packages/components/Dialog/src/ConfirmationDialog.html
@@ -1,14 +1,38 @@
-<Dialog ref:dialog {..._dialogProps}>
+<Dialog ref:dialog {..._dialogProps} bind:isOpen>
   <slot></slot>
   <div slot="extra">
-    <div class="actions">
-      <div class="action" on:click="fire('negative')" shortcut="close">
-        <RoundIcon symbol="close" size="giant" borderRadius="15px" bgColor="#ef5152" />
-      </div>
-      <div class="action" on:click="fire('positive')" shortcut="enter">
-        <RoundIcon symbol="check" size="giant" borderRadius="15px" bgColor="#4ebf1a" />
-      </div>
-    </div>
+      <table class="actions" class:has-labels="hasLabel">
+        <tr>
+          <td>
+            {#if hasLabel}
+              <button class="action" on:click="fire('negative')" shortcut="close">
+                {negativeLabel}
+              </button>
+            {:else}
+              <div class="action" on:click="fire('negative')" shortcut="close">
+                <RoundIcon symbol="close" size="giant" borderRadius="15px" bgColor="#ef5152" />
+              </div>
+            {/if}
+          </td>
+          <td class="spacer"></td>
+          <td>
+            {#if hasLabel}
+              <button
+                class="action"
+                style='color: #fff; background-color: {primaryColor}; border-color: {primaryColor};'
+                on:click="fire('positive')"
+                shortcut="enter"
+              >
+                {positiveLabel}
+              </button>
+            {:else}
+              <div class="action" on:click="fire('positive')" shortcut="enter">
+                <RoundIcon symbol="check" size="giant" borderRadius="15px" bgColor="#4ebf1a" />
+              </div>
+            {/if}
+          </td>
+        </tr>
+      </table>
   </div>
 </Dialog>
 
@@ -20,8 +44,17 @@
       RoundIcon,
       Dialog: './Dialog.html',
     },
+    data() {
+      return {
+        positiveLabel: null,
+        negativeLabel: null,
+        primaryColor: '#4fb341',
+      };
+    },
     computed: {
       _dialogProps: props => props,
+      hasLabel: ({ negativeLabel, positiveLabel }) =>
+        !!(negativeLabel || positiveLabel),
     },
     oncreate() {
       /** When the dialog opens, prevent 'closing' the app with the 'close' key */
@@ -52,16 +85,25 @@
 
 <style>
   .actions {
-    margin-top: 25px;
-    text-align: center;
-    font-size: 0;
+    margin: 28px 0 0;
+    width: 100%;
+    table-layout: fixed;
   }
 
   .action {
-    display: inline-block;
+    display: block;
+    background: transparent;
+    width: 100%;
+
+    .actions.has-labels & {
+      border: 1px solid #425963;
+      border-radius: 3px;
+      padding: 10px 16px;
+      color: #425963;
+    }
   }
 
-  .action + .action {
-    margin-left: 20px;
+  .spacer {
+    width: 10px;
   }
 </style>
