Remove unused border-color

--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -31,7 +31,7 @@
   {/if}
 
   {#if !isValid && !!_errorMsg}
-    <div class="validation-msg" style="color: {errorColor}; border-color: {errorColor};">
+    <div class="validation-msg" style="color: {errorColor};">
       {_errorMsg}
     </div>
   {/if}
