--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -77,8 +77,6 @@
 <style>
   .range {
     position: relative;
-    display: flex;
-    align-items: center;
     width: 100%;
     padding-top: 30px;
   }
@@ -100,6 +98,10 @@
 
   .icon {
     margin-right: 5px;
+  }
+
+  table {
+    width: 100%;
   }
 
   td {
