Add default icon prop (null)

--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -27,13 +27,11 @@
   export default {
     data() {
       return {
-        class: '',
-        style: '',
+        icon: null,
         min: 0,
         max: 100,
         step: 10,
         value: 0,
-        label: '',
         unit: '%',
         mainColor: '#3da10f',
         textColor: '#494949',
