Add default isOpen prop

--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -44,6 +44,7 @@
     },
     data() {
       return {
+        isOpen: false,
         positiveLabel: null,
         negativeLabel: null,
         primaryColor: '#4fb341',
