--- a/packages/components/Dialog/Promised.html
+++ b/packages/components/Dialog/Promised.html
@@ -1,4 +1,4 @@
-<Dialog ref:dialog {..._dialogProps}>
+<Dialog ref:dialog {..._dialogProps} bind:isOpen>
   <slot></slot>
 </Dialog>
 
@@ -9,6 +9,7 @@
     },
     data() {
       return {
+        isOpen: false,
         promise: null,
         delay: 2000,
       };
