--- a/packages/pos/simulator/view/partials/Screen.html
+++ b/packages/pos/simulator/view/partials/Screen.html
@@ -55,7 +55,7 @@
 
       if (this.store) {
         /** Listen for brightness changes */
-        this.store.on('pos:brightness', brightnessLevel => {
+        this.store.on('simulator:brightness', brightnessLevel => {
           this.set({ brightnessLevel });
         });
       }
