--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -44,18 +44,14 @@
           .filter(Boolean)
           .join(';');
       },
-      isAtHome: ({ _location }) => _location === '/',
+      isAtHomee: ({ _location }) => _location === '/',
       homeIcon: ({ isAtHome }) => (isAtHome ? 'home' : 'app-home'),
       isAppLocked: ({ $__meta__ }) => $__meta__.locked,
     },
     oncreate() {
-      if (this.store) {
-        /** Listen for route changes and appbar prop changes */
-        this.store.on('router:navigation', ctx =>
-          this.set({ _location: ctx.path }),
-        );
-        this.store.on('modifier:appbar', state => this.set(state));
-      }
+      /** Listen for route changes and appbar prop changes */
+      this.root.on('router:navigation', ctx => this.set({ _location: ctx.path }));
+      this.root.on('appbar:modify', state => this.set(state));
     },
     onstate({ changed, current }) {
       if (changed.title) {
@@ -66,7 +62,7 @@
       gohome() {
         const { isAtHome } = this.get();
         if (isAtHome) {
-          return this.store.meta.closeApp();
+          return this.root.fire('close');
         }
 
         Router.go('/');
