--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -1,6 +1,6 @@
 <header class="appbar" {style}>
   <div class="content">
-    {#if !isAtHome && !isAppLocked}
+    {#if !isAtHome && !_isNavigationLocked}
       <div class="icon-left" on:click="goback()">
         <Icon symbol="chevron-left" width="10px" color={textColor} />
       </div>
@@ -10,7 +10,7 @@
       <div class="title">{title}</div>
     {/if}
 
-    {#if !isAppLocked}
+    {#if !_isNavigationLocked}
       <div class="icon-right" on:click="gohome()">
         <Icon symbol={homeIcon} color={textColor}/>
       </div>
@@ -28,6 +28,7 @@
     data() {
       return {
         _location: undefined,
+        _isNavigationLocked: false,
         title: undefined,
         textColor: '#425963',
         bgColor: '#f2f2f2',
@@ -46,12 +47,16 @@
       },
       isAtHome: ({ _location }) => _location === '/',
       homeIcon: ({ isAtHome }) => (isAtHome ? 'home' : 'app-home'),
-      isAppLocked: ({ $__meta__ }) => $__meta__.locked,
     },
     oncreate() {
+      const { root } = this;
+
       /** Listen for route changes and appbar prop changes */
-      this.root.on('router:navigation', ctx => this.set({ _location: ctx.path }));
-      this.root.on('appbar:modify', state => this.set(state));
+      root.on('appbar:modify', state => this.set(state));
+      root.on('router:navigation', ctx => this.set({ _location: ctx.path }));
+      root.on('navigation:change', value => {
+        this.set({ _isNavigationLocked: value });
+      });
     },
     onstate({ changed, current }) {
       if (changed.title) {
