Add fixed center css helper

--- a/packages/styles/src/helpers.pcss
+++ b/packages/styles/src/helpers.pcss
@@ -5,6 +5,13 @@
   width: 100%;
 }
 
+.h-fixed-center {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .h-color-gray-darker {
   color: $gray-darker;
 }
