Add window.MambaApp when in browser and dev mode

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -59,6 +59,9 @@
     onstate({ previous }) {
       if (!previous) {
         this.root.meta = this;
+        if (__DEV__ && __BROWSER__) {
+          window.MambaApp = this.root;
+        }
       }
     },
     methods: {
